--- a/jaxb-api-test/pom.xml
+++ b/jaxb-api-test/pom.xml
@@ -61,25 +61,10 @@
                         <id>copy</id>
                         <phase>process-resources</phase>
                         <goals>
-                            <goal>copy</goal>
+                            <goal>copy-dependencies</goal>
                         </goals>
                         <configuration>
-                            <artifactItems>
-                                <artifactItem>
-                                    <groupId>jakarta.xml.bind</groupId>
-                                    <artifactId>jakarta.xml.bind-api</artifactId>
-                                    <version>${project.version}</version>
-                                    <overWrite>true</overWrite>
-                                    <outputDirectory>${project.build.directory}/modules</outputDirectory>
-                                </artifactItem>
-                                <artifactItem>
-                                    <groupId>jakarta.activation</groupId>
-                                    <artifactId>jakarta.activation-api</artifactId>
-                                    <version>${activation.version}</version>
-                                    <overWrite>true</overWrite>
-                                    <outputDirectory>${project.build.directory}/modules</outputDirectory>
-                                </artifactItem>
-                            </artifactItems>
+                            <outputDirectory>${project.build.directory}/modules</outputDirectory>
                         </configuration>
                     </execution>
                 </executions>
@@ -127,27 +112,24 @@
             <plugin>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <configuration>
+                    <release>11</release>
                     <doclint>none</doclint>
                     <nodeprecated>false</nodeprecated>
                     <use>false</use>
                     <author>true</author>
                     <version>true</version>
-                    <doctitle><![CDATA[<br>
-JAXB ${project.version} API Library Tests</h2>
-${project.name} specification, ${release.spec.date}<br>
-Comments to: <i><a href='mailto:${release.spec.feedback}'>${release.spec.feedback}</a></i><br>
-More information at: <i><a target='_top'
-href='https://projects.eclipse.org/projects/ee4j.jaxb'>https://projects.eclipse.org/projects/ee4j.jaxb</a></i><br>
-&nbsp;<br>&nbsp;<br><hr width='65%'><h1>${project.name}</h1><hr width='75%'>
-<br>&nbsp;<br>]]>
-                    </doctitle>
-                    <header><![CDATA[JAXB<br>v${project.version}]]>
+                    <doctitle>Jakarta XML Binding API Library Tests documentation</doctitle>
+                    <header><![CDATA[Jakarta XML Binding<br>v${project.version}]]>
                     </header>
                     <bottom>
-                        <![CDATA[<br>Copyright &#169; {inceptionYear}&#x2013;{currentYear} Oracle and/or its affiliates.
-                        All rights reserved.<br>Comments to : <a href="mailto:${release.spec.feedback}">${release.spec.feedback}</a>.]]>
+                    <![CDATA[
+Comments to : <a href="mailto:${release.spec.feedback}">${release.spec.feedback}</a>.<br>
+Copyright &#169; 2019 Eclipse Foundation. All rights reserved.<br>
+Use is subject to <a href="{@docRoot}/doc-files/speclicense.html" target="_top">license terms</a>.]]>
                     </bottom>
                     <detectJavaApiLink>false</detectJavaApiLink>
+                    <detectOfflineLinks>false</detectOfflineLinks>
+                    <docfilessubdirs>true</docfilessubdirs>
                 </configuration>
             </plugin>
         </plugins>
