--- a/jaxb-api/pom.xml
+++ b/jaxb-api/pom.xml
@@ -87,6 +87,14 @@
                 <plugin>
                     <artifactId>maven-javadoc-plugin</artifactId>
                     <configuration>
+                        <source>1.8</source>
+                        <release>8</release>
+                        <additionalOptions>
+                            <additionalOption>--frames</additionalOption>
+                        </additionalOptions>
+                        <sourceFileExcludes>
+                            <sourceFileExclude>module-info.java</sourceFileExclude>
+                        </sourceFileExcludes>
                         <nodeprecated>false</nodeprecated>
                         <notimestamp>true</notimestamp>
                         <use>false</use>
