--- a/spec/pom.xml
+++ b/spec/pom.xml
@@ -21,12 +21,12 @@
     <parent>
         <groupId>org.eclipse.ee4j</groupId>
         <artifactId>project</artifactId>
-        <version>1.0.5</version>
+        <version>1.0.6</version>
         <relativePath/>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>jakarta.xml.bind</groupId>
-    <artifactId>jakarta.xml.bind-spec</artifactId>
+    <artifactId>xml-binding-spec</artifactId>
     <packaging>pom</packaging>
     <version>2.3-SNAPSHOT</version>
     <name>Jakarta XML Binding Specification</name>
@@ -111,7 +111,7 @@
                         </goals>
                         <configuration>
                             <backend>html5</backend>
-                            <outputFile>${project.build.directory}/generated-docs/jakarta.xml.bind-spec-${project.version}.html</outputFile>
+                            <outputFile>${project.build.directory}/generated-docs/${project.artifactId}-${project.version}.html</outputFile>
                             <attributes>
                                 <doctype>book</doctype>
                                 <status>${status}</status>
@@ -134,7 +134,7 @@
                         </goals>
                         <configuration>
                             <backend>pdf</backend>
-                            <outputFile>${project.build.directory}/generated-docs/jakarta.xml.bind-spec-${project.version}.pdf</outputFile>
+                            <outputFile>${project.build.directory}/generated-docs/${project.artifactId}-${project.version}.pdf</outputFile>
                             <attributes>
                                 <pdf-stylesdir>${project.basedir}/src/theme</pdf-stylesdir>
                                 <pdf-style>jakartaee</pdf-style>
@@ -155,7 +155,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <sourceDocumentName>jakarta.xml.bind-spec.adoc</sourceDocumentName>
+                    <sourceDocumentName>${project.artifactId}.adoc</sourceDocumentName>
                     <sourceHighlighter>coderay</sourceHighlighter>
                     <attributes>
                         <revnumber>${project.version}</revnumber>
