switch to modularized javadoc format
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,7 @@ dist: bionic
 
 jdk:
   - oraclejdk11
-# jdk 14 does not provide JDK 8 compatible javadoc, disabled for now
-#  - oraclejdk14
+  - oraclejdk14
 
 cache:
   directories:
