--- a/jaxb-api/pom.xml
+++ b/jaxb-api/pom.xml
@@ -30,9 +30,12 @@
     </properties>
 
     <dependencies>
+        <!-- usign '-api' artifact here is causing issues for API consumers,
+             ie conflicts on JPMS, since one cannot have two artifacts having same
+             packages on the path and 'provided' scope is not transitive -->
         <dependency>
-            <groupId>jakarta.activation</groupId>
-            <artifactId>jakarta.activation-api</artifactId>
+            <groupId>com.sun.activation</groupId>
+            <artifactId>jakarta.activation</artifactId>
         </dependency>
     </dependencies>
 
