fix JAXB acronym usage, use correct module name
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>

--- a/jaxb-api/pom.xml
+++ b/jaxb-api/pom.xml
@@ -88,6 +88,7 @@
                         <release>11</release>
                         <nodeprecated>false</nodeprecated>
                         <notimestamp>true</notimestamp>
+                        <nosince>true</nosince>
                         <use>false</use>
                         <author>true</author>
                         <version>true</version>
