--- a/spec/pom.xml
+++ b/spec/pom.xml
@@ -28,7 +28,7 @@
     <groupId>jakarta.xml.bind</groupId>
     <artifactId>xml-binding-spec</artifactId>
     <packaging>pom</packaging>
-    <version>3.0-SNAPSHOT</version>
+    <version>3.0</version>
     <name>Jakarta XML Binding Specification</name>
 
     <properties>
