Jakarta Activation dependency update (2.0.2-SNAPSHOT).
Signed-off-by: Tomas Kraus <Tomas.Kraus@oracle.com>

--- a/jaxb-api-test/pom.xml
+++ b/jaxb-api-test/pom.xml
@@ -44,6 +44,11 @@
             <groupId>jakarta.activation</groupId>
             <artifactId>jakarta.activation-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
