--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,7 @@
         <extension.name>jakarta.xml.bind</extension.name>
         <spec.version>4.0</spec.version>
         <impl.version>3.0.2-SNAPSHOT</impl.version>
-        <activation.version>2.0.2-SNAPSHOT</activation.version>
+        <activation.version>2.1.0-RC1</activation.version>
         <config.dir>${project.basedir}/etc/config</config.dir>
         <vendor.name>Eclipse Foundation</vendor.name>
     </properties>
@@ -100,11 +100,6 @@
             <dependency>
                 <groupId>jakarta.activation</groupId>
                 <artifactId>jakarta.activation-api</artifactId>
-                <version>${activation.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.sun.activation</groupId>
-                <artifactId>sun-activation-registry</artifactId>
                 <version>${activation.version}</version>
             </dependency>
             <dependency>
