Jakarta Activation dependency update (2.1.0-RC1). (#196)
* Tests excluded in JAXBContextTest configuration.

Signed-off-by: Tomas Kraus <tomas.kraus@oracle.com>

--- a/jaxb-api/pom.xml
+++ b/jaxb-api/pom.xml
@@ -30,12 +30,9 @@
     </properties>
 
     <dependencies>
-        <!-- usign '-api' artifact here is causing issues for API consumers,
-             ie conflicts on JPMS, since one cannot have two artifacts having same
-             packages on the path and 'provided' scope is not transitive -->
         <dependency>
-            <groupId>com.sun.activation</groupId>
-            <artifactId>jakarta.activation</artifactId>
+            <groupId>jakarta.activation</groupId>
+            <artifactId>jakarta.activation-api</artifactId>
         </dependency>
     </dependencies>
 
