--- a/pom.xml
+++ b/pom.xml
@@ -84,15 +84,13 @@
         <api.package>jakarta.xml.bind</api.package>
         <extension.name>jakarta.xml.bind</extension.name>
         <spec.version>4.0</spec.version>
-        <impl.version>0</impl.version>
-        <activation.version>2.0.1</activation.version>
+        <activation.version>2.1.0-RC1</activation.version>
         <config.dir>${project.basedir}/etc/config</config.dir>
         <vendor.name>Eclipse Foundation</vendor.name>
     </properties>
 
     <modules>
         <module>jaxb-api</module>
-        <module>jaxb-api-test</module>
     </modules>
 
     <dependencyManagement>
@@ -100,11 +98,6 @@
             <dependency>
                 <groupId>jakarta.activation</groupId>
                 <artifactId>jakarta.activation-api</artifactId>
-                <version>${activation.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.sun.activation</groupId>
-                <artifactId>jakarta.activation</artifactId>
                 <version>${activation.version}</version>
             </dependency>
         </dependencies>
@@ -238,5 +231,14 @@
         </plugins>
 
     </build>
+
+    <profiles>
+        <profile>
+            <id>test</id>
+            <modules>
+                <module>jaxb-api-test</module>
+            </modules>
+        </profile>
+    </profiles>
 
 </project>
