--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,7 @@
         <api.package>jakarta.xml.bind</api.package>
         <extension.name>jakarta.xml.bind</extension.name>
         <spec.version>4.0</spec.version>
-        <activation.version>2.1.0-RC1</activation.version>
+        <activation.version>2.1.0</activation.version>
         <config.dir>${project.basedir}/etc/config</config.dir>
         <vendor.name>Eclipse Foundation</vendor.name>
     </properties>
